assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* page */
.page-enter-active,
.page-leave-active {
  @apply transition-opacity duration-200 ease-in-out;
}

.page-enter-from,
.page-leave-to {
  @apply opacity-0;
}

.page-enter-to,
.page-leave-from {
  @apply opacity-100;
}

/* fade-and-rise */
.fade-and-rise-enter-active {
  @apply transition duration-200 ease-out;
}
.fade-and-rise-enter-from {
  @apply opacity-0 translate-y-4 scale-95;
}
.fade-and-rise-enter-to {
  @apply opacity-100 translate-y-0 scale-100;
}

/* sidebar - enter from left */
.sidebar-enter-active,
.sidebar-leave-active {
  @apply transition-all duration-200 ease-in-out;
}

.sidebar-enter-from,
.sidebar-leave-to {
  @apply opacity-0 -translate-x-60;
}

.sidebar-enter-to,
.sidebar-leave-from {
  @apply opacity-100 translate-x-0;
}

